# Mysteriondex

./: README.md
Advanced Python/: Ausarbeitung.ipynb  Ausarbeitung.tex
Elektrische Systeme 1/: ES1_A01.m  ES1_A02.m  ES1_A03.m  ES1_A04.m  ES1_A05.m  ES1_A06.m  ES1_A07.m  ES1_A08.m  ES1_A09.m  ES1_A10.m  ES1_A11.m  ES1_A12.m  ES1_A13.m  ES1_A14.m  ES1_A15.m  ES1_A17.m  ES1_A18.m  ES1_A22.m  ES1_A23.m  ES1_A24.m  ES1_A27.m  ES1_A30.m  ES1_A31_Lenz.m  ES1_A32_Lenz.m  ES1_A33_Lenz.m
INF1/ueb1/: a.out  (+1 more)
INF2/: Untitled Document 1
INF3/ueb2/: CAccount.cpp  CAccount.h  CAddress.cpp  CAddress.h  CCustomer.cpp  CCustomer.h  CMakeCache.txt  CMakeLists.txt  CMoney.cpp  CMoney.h  CTime.cpp  CTime.h  Makefile  cmake_install.cmake  main.cpp  prog
INF3/ueb2/src/: caccount.h  caddress.cpp  ccustomer.cpp  ccustomer.h
MCT/: .MCT-VL.pdf.icloud  .VorlesungTeil1_MCT.pdf.icloud  .VorlesungTeil9_MCT.pdf.icloud
MOP/: .Voss_Skript_MOP.pdf.icloud
Messtechnik/: .Mitschrift SU EMT 19W.pdf.icloud  .Skript.pdf.icloud
Präsentationstechnik/: .Industrie4_0.pdf.icloud  .Informatik im Alltag Gruppe 2A.pdf.icloud  .LaTeX.zip.icloud  .Präsentation Gruppe B3 250619.pdf.icloud  .Präsentation.pdf.icloud
Rechnerarchitektur und –organisation/: .RA-Termin-1-Handout (1).pdf.icloud  .RA-Termin-1-Handout.pdf.icloud  .RA-Termin-15-Handout.pdf.icloud  .RA-Termin-15.pdf.icloud  .RA-Termin-2-Handout (1).pdf.icloud  .RA-Termin-2-Handout.pdf.icloud  .RA-Termin-3.pdf.icloud  .RA-Termin-4-Handout (1).pdf.icloud  .RA-Termin-4-Handout.pdf.icloud  .RA-Termin-4.pdf.icloud  .RA-Termin-6-Handout (1).pdf.icloud  (+7 more)
(+432 files in other folders)
